--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "\"\\nsome rcids don't have issue tags, some have multiple\\n\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,11 +273,9 @@
      "text": [
       "Number of countries: 200\n",
       "            country  correlation_score\n",
-      "37          Vietnam               0.90\n",
+      "0        Seychelles               0.97\n",
       "73        Singapore               0.88\n",
       "100           China               0.85\n",
-      "107     Afghanistan               0.85\n",
-      "131            Cuba               0.80\n",
       "151          Russia               0.67\n",
       "192  United Kingdom               0.47\n",
       "193          France               0.47\n",
@@ -287,6 +285,9 @@
    ],
    "source": [
     "#Question: Which countries' votes are most correlated to the overall vote passing? Which country has the highest \"success rate\"\n",
+    "\n",
+    "#update timeframe: 1947-1991\n",
+    "rollcall_cold_war = roll_calls\n",
     "\n",
     "#update unvotes with a column on whether the vote passed or failed\n",
     "yes_ratio = ((unvotes['vote'] == 'yes').groupby(unvotes['rcid']).mean())\n",
@@ -303,15 +304,17 @@
     "correlation_table = correlation_table.reset_index(drop=True)\n",
     "print(f\"Number of countries: {len(correlation_table)}\")\n",
     "\n",
-    "countries_of_interest = ['United States', 'China', 'United Kingdom', 'Russia', 'France', 'Cuba', 'Afghanistan', 'Vietnam', 'Singapore']\n",
+    "countries_of_interest = ['United States', 'China', 'United Kingdom', 'Russia', 'France', 'Singapore']\n",
+    "first_entry = correlation_table.head(1)\n",
     "filtered_table = correlation_table[correlation_table['country'].isin(countries_of_interest)]\n",
+    "filtered_table_with_first = pd.concat([first_entry, filtered_table], axis = 0)\n",
     "\n",
-    "print(filtered_table)"
+    "print(filtered_table_with_first)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -319,65 +322,53 @@
      "output_type": "stream",
      "text": [
       "            country  correlation_score         issue\n",
-      "5             China               0.84  Human Rights\n",
-      "70          Vietnam               0.81  Human Rights\n",
-      "94           France               0.80  Human Rights\n",
-      "115          Russia               0.80  Human Rights\n",
-      "128     Afghanistan               0.80  Human Rights\n",
-      "133   United States               0.79  Human Rights\n",
-      "162  United Kingdom               0.79  Human Rights\n",
-      "175            Cuba               0.79  Human Rights\n",
-      "185       Singapore               0.78  Human Rights\n",
+      "0        Seychelles               0.94  Human Rights\n",
+      "46            China               0.84  Human Rights\n",
+      "124       Singapore               0.75  Human Rights\n",
+      "130          Russia               0.73  Human Rights\n",
+      "190          France               0.40  Human Rights\n",
+      "191  United Kingdom               0.38  Human Rights\n",
+      "197   United States               0.22  Human Rights\n",
       "            country  correlation_score                 issue\n",
-      "43            China               0.83  Economic Development\n",
-      "89    United States               0.81  Economic Development\n",
-      "107            Cuba               0.81  Economic Development\n",
-      "110       Singapore               0.80  Economic Development\n",
-      "123          Russia               0.80  Economic Development\n",
-      "126  United Kingdom               0.80  Economic Development\n",
-      "136         Vietnam               0.80  Economic Development\n",
-      "165     Afghanistan               0.79  Economic Development\n",
-      "173          France               0.78  Economic Development\n",
+      "0          Kiribati               0.99  Economic Development\n",
+      "80        Singapore               0.92  Economic Development\n",
+      "126           China               0.87  Economic Development\n",
+      "165          Russia               0.63  Economic Development\n",
+      "194          France               0.44  Economic Development\n",
+      "195  United Kingdom               0.44  Economic Development\n",
+      "198   United States               0.28  Economic Development\n",
       "            country  correlation_score        issue\n",
-      "7             China               0.85  Colonialism\n",
-      "47          Vietnam               0.82  Colonialism\n",
-      "81        Singapore               0.81  Colonialism\n",
-      "125          Russia               0.80  Colonialism\n",
-      "146            Cuba               0.79  Colonialism\n",
-      "157   United States               0.79  Colonialism\n",
-      "162          France               0.79  Colonialism\n",
-      "185     Afghanistan               0.77  Colonialism\n",
-      "190  United Kingdom               0.77  Colonialism\n",
+      "0            Brunei               0.98  Colonialism\n",
+      "30            China               0.94  Colonialism\n",
+      "47        Singapore               0.93  Colonialism\n",
+      "139          Russia               0.76  Colonialism\n",
+      "193  United Kingdom               0.32  Colonialism\n",
+      "194          France               0.32  Colonialism\n",
+      "198   United States               0.19  Colonialism\n",
       "            country  correlation_score      issue\n",
-      "22            China               0.84  Palestine\n",
-      "58             Cuba               0.83  Palestine\n",
-      "82           France               0.82  Palestine\n",
-      "108   United States               0.82  Palestine\n",
-      "127       Singapore               0.81  Palestine\n",
-      "150          Russia               0.81  Palestine\n",
-      "167     Afghanistan               0.80  Palestine\n",
-      "174         Vietnam               0.80  Palestine\n",
-      "183  United Kingdom               0.79  Palestine\n",
+      "0        Seychelles               1.00  Palestine\n",
+      "14            China               0.98  Palestine\n",
+      "82        Singapore               0.92  Palestine\n",
+      "130          Russia               0.80  Palestine\n",
+      "180          France               0.62  Palestine\n",
+      "184  United Kingdom               0.61  Palestine\n",
+      "193   United States               0.13  Palestine\n",
       "            country  correlation_score issue\n",
-      "28    United States               0.83  Arms\n",
-      "43             Cuba               0.83  Arms\n",
-      "45        Singapore               0.83  Arms\n",
-      "57          Vietnam               0.82  Arms\n",
-      "108           China               0.81  Arms\n",
-      "115     Afghanistan               0.81  Arms\n",
-      "121          Russia               0.81  Arms\n",
-      "183          France               0.78  Arms\n",
-      "184  United Kingdom               0.78  Arms\n",
+      "0       Timor-Leste               0.99  Arms\n",
+      "57        Singapore               0.94  Arms\n",
+      "136           China               0.77  Arms\n",
+      "177          Russia               0.60  Arms\n",
+      "194  United Kingdom               0.44  Arms\n",
+      "196          France               0.40  Arms\n",
+      "198   United States               0.29  Arms\n",
       "            country  correlation_score    issue\n",
-      "40          Vietnam               0.83  Nuclear\n",
-      "52             Cuba               0.83  Nuclear\n",
-      "60    United States               0.82  Nuclear\n",
-      "74        Singapore               0.82  Nuclear\n",
-      "91            China               0.82  Nuclear\n",
-      "118          Russia               0.81  Nuclear\n",
-      "166     Afghanistan               0.79  Nuclear\n",
-      "181  United Kingdom               0.78  Nuclear\n",
-      "189          France               0.76  Nuclear\n"
+      "0       Timor-Leste               0.99  Nuclear\n",
+      "77        Singapore               0.94  Nuclear\n",
+      "138           China               0.72  Nuclear\n",
+      "168          Russia               0.54  Nuclear\n",
+      "195  United Kingdom               0.31  Nuclear\n",
+      "196   United States               0.24  Nuclear\n",
+      "197          France               0.23  Nuclear\n"
      ]
     }
    ],
@@ -402,7 +393,10 @@
     "for key, value in mapping.items(): \n",
     "    df = unvotes[unvotes['rcid'].isin(value)]\n",
     "    correlation_by_issue = get_top_correlations(df, key)\n",
-    "    print(correlation_by_issue[correlation_by_issue['country'].isin(countries_of_interest)])\n"
+    "    top = correlation_by_issue.head(1)\n",
+    "    veto = correlation_by_issue[correlation_by_issue['country'].isin(countries_of_interest)]\n",
+    "    together = pd.concat([top, veto], axis = 0)\n",
+    "    print(together)\n"
    ]
   }
  ],
