--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "\"\\nsome rcids don't have issue tags, some have multiple\\n\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,12 +86,6 @@
     "this table maps the specific topic discussed to a specific vote session id.\n",
     "\n",
     "note: \n",
-    "- me: palestinian conflict\n",
-    "- nu: nuclear weapons & nuclear material\n",
-    "- di: arms control & disarmament\n",
-    "- hr: human rights\n",
-    "- co: colonialism\n",
-    "- ec: economic development \n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -115,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,22 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of countries: 200\n",
+      "Number of countries: 172\n",
       "            country  correlation_score\n",
-      "0        Seychelles               0.97\n",
-      "73        Singapore               0.88\n",
-      "100           China               0.85\n",
-      "151          Russia               0.67\n",
-      "192  United Kingdom               0.47\n",
-      "193          France               0.47\n",
-      "198   United States               0.32\n"
+      "0           Vanuatu               0.98\n",
+      "55            China               0.89\n",
+      "70        Singapore               0.87\n",
+      "139          Russia               0.67\n",
+      "167  United Kingdom               0.42\n",
+      "168          France               0.41\n",
+      "170   United States               0.36\n"
      ]
     }
    ],
@@ -287,7 +281,8 @@
     "#Question: Which countries' votes are most correlated to the overall vote passing? Which country has the highest \"success rate\"\n",
     "\n",
     "#update timeframe: 1947-1991\n",
-    "rollcall_cold_war = roll_calls\n",
+    "rollcall_cold_war = roll_calls[roll_calls['date'].between('1947-03-12', '1991-12-26')]['rcid']\n",
+    "unvotes = unvotes[unvotes['rcid'].isin(rollcall_cold_war)]\n",
     "\n",
     "#update unvotes with a column on whether the vote passed or failed\n",
     "yes_ratio = ((unvotes['vote'] == 'yes').groupby(unvotes['rcid']).mean())\n",
@@ -314,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -322,53 +317,53 @@
      "output_type": "stream",
      "text": [
       "            country  correlation_score         issue\n",
-      "0        Seychelles               0.94  Human Rights\n",
-      "46            China               0.84  Human Rights\n",
-      "124       Singapore               0.75  Human Rights\n",
-      "130          Russia               0.73  Human Rights\n",
-      "190          France               0.40  Human Rights\n",
-      "191  United Kingdom               0.38  Human Rights\n",
-      "197   United States               0.22  Human Rights\n",
+      "0           Vanuatu               0.99  Human Rights\n",
+      "36            China               0.88  Human Rights\n",
+      "90        Singapore               0.82  Human Rights\n",
+      "99           Russia               0.81  Human Rights\n",
+      "164          France               0.35  Human Rights\n",
+      "165  United Kingdom               0.30  Human Rights\n",
+      "167   United States               0.27  Human Rights\n",
       "            country  correlation_score                 issue\n",
-      "0          Kiribati               0.99  Economic Development\n",
-      "80        Singapore               0.92  Economic Development\n",
-      "126           China               0.87  Economic Development\n",
-      "165          Russia               0.63  Economic Development\n",
-      "194          France               0.44  Economic Development\n",
-      "195  United Kingdom               0.44  Economic Development\n",
-      "198   United States               0.28  Economic Development\n",
+      "0           Namibia               1.00  Economic Development\n",
+      "89        Singapore               0.90  Economic Development\n",
+      "104           China               0.88  Economic Development\n",
+      "149          Russia               0.58  Economic Development\n",
+      "165          France               0.40  Economic Development\n",
+      "167  United Kingdom               0.39  Economic Development\n",
+      "169   United States               0.32  Economic Development\n",
       "            country  correlation_score        issue\n",
-      "0            Brunei               0.98  Colonialism\n",
-      "30            China               0.94  Colonialism\n",
-      "47        Singapore               0.93  Colonialism\n",
-      "139          Russia               0.76  Colonialism\n",
-      "193  United Kingdom               0.32  Colonialism\n",
-      "194          France               0.32  Colonialism\n",
-      "198   United States               0.19  Colonialism\n",
+      "0           Namibia               1.00  Colonialism\n",
+      "10            China               0.96  Colonialism\n",
+      "54        Singapore               0.89  Colonialism\n",
+      "108          Russia               0.82  Colonialism\n",
+      "167  United Kingdom               0.27  Colonialism\n",
+      "168          France               0.27  Colonialism\n",
+      "169   United States               0.25  Colonialism\n",
       "            country  correlation_score      issue\n",
       "0        Seychelles               1.00  Palestine\n",
-      "14            China               0.98  Palestine\n",
-      "82        Singapore               0.92  Palestine\n",
-      "130          Russia               0.80  Palestine\n",
-      "180          France               0.62  Palestine\n",
-      "184  United Kingdom               0.61  Palestine\n",
-      "193   United States               0.13  Palestine\n",
+      "15            China               0.99  Palestine\n",
+      "91        Singapore               0.88  Palestine\n",
+      "99           Russia               0.85  Palestine\n",
+      "160          France               0.49  Palestine\n",
+      "164  United Kingdom               0.48  Palestine\n",
+      "169   United States               0.21  Palestine\n",
       "            country  correlation_score issue\n",
-      "0       Timor-Leste               0.99  Arms\n",
-      "57        Singapore               0.94  Arms\n",
-      "136           China               0.77  Arms\n",
-      "177          Russia               0.60  Arms\n",
-      "194  United Kingdom               0.44  Arms\n",
-      "196          France               0.40  Arms\n",
-      "198   United States               0.29  Arms\n",
+      "0       North Korea               1.00  Arms\n",
+      "50        Singapore               0.92  Arms\n",
+      "132          Russia               0.74  Arms\n",
+      "134           China               0.73  Arms\n",
+      "168  United Kingdom               0.39  Arms\n",
+      "169          France               0.31  Arms\n",
+      "170   United States               0.30  Arms\n",
       "            country  correlation_score    issue\n",
-      "0       Timor-Leste               0.99  Nuclear\n",
-      "77        Singapore               0.94  Nuclear\n",
-      "138           China               0.72  Nuclear\n",
-      "168          Russia               0.54  Nuclear\n",
-      "195  United Kingdom               0.31  Nuclear\n",
-      "196   United States               0.24  Nuclear\n",
-      "197          France               0.23  Nuclear\n"
+      "0       North Korea               1.00  Nuclear\n",
+      "83        Singapore               0.89  Nuclear\n",
+      "129          Russia               0.73  Nuclear\n",
+      "137           China               0.69  Nuclear\n",
+      "166  United Kingdom               0.29  Nuclear\n",
+      "169   United States               0.27  Nuclear\n",
+      "170          France               0.16  Nuclear\n"
      ]
     }
    ],
@@ -397,6 +392,193 @@
     "    veto = correlation_by_issue[correlation_by_issue['country'].isin(countries_of_interest)]\n",
     "    together = pd.concat([top, veto], axis = 0)\n",
     "    print(together)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human Rights\n",
+      "Yes: 0.77\n",
+      "No: 0.07\n",
+      "Abstain: 0.16 \n",
+      "\n",
+      "Economic Development\n",
+      "Yes: 0.82\n",
+      "No: 0.06\n",
+      "Abstain: 0.12 \n",
+      "\n",
+      "Colonialism\n",
+      "Yes: 0.77\n",
+      "No: 0.08\n",
+      "Abstain: 0.15 \n",
+      "\n",
+      "Palestine\n",
+      "Yes: 0.82\n",
+      "No: 0.06\n",
+      "Abstain: 0.12 \n",
+      "\n",
+      "Arms\n",
+      "Yes: 0.82\n",
+      "No: 0.05\n",
+      "Abstain: 0.13 \n",
+      "\n",
+      "Nuclear\n",
+      "Yes: 0.82\n",
+      "No: 0.05\n",
+      "Abstain: 0.14 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question: What is the yes-rate for each issue? \n",
+    "\n",
+    "def rates(subgroup, issue): \n",
+    "    values = subgroup['vote'].value_counts()\n",
+    "    sum = values.sum()\n",
+    "    yes = round(values.get('yes', 0) / sum, 2)\n",
+    "    no = round(values.get('no', 0) / sum, 2)\n",
+    "    abstain = round(values.get('abstain', 0) / sum, 2)\n",
+    "    return yes, no, abstain \n",
+    "\n",
+    "for key, value in mapping.items(): \n",
+    "    df = unvotes[unvotes['rcid'].isin(value)]\n",
+    "    yes, no, abstain = rates(df, key)\n",
+    "    print(f\"{key}\")\n",
+    "    print(f\"Yes: {yes}\")\n",
+    "    print(f\"No: {no}\")\n",
+    "    print(f\"Abstain: {abstain} \\n\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function value_counts in module pandas.core.frame:\n",
+      "\n",
+      "value_counts(self, subset: 'IndexLabel | None' = None, normalize: 'bool' = False, sort: 'bool' = True, ascending: 'bool' = False, dropna: 'bool' = True) -> 'Series'\n",
+      "    Return a Series containing the frequency of each distinct row in the Dataframe.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    subset : label or list of labels, optional\n",
+      "        Columns to use when counting unique combinations.\n",
+      "    normalize : bool, default False\n",
+      "        Return proportions rather than frequencies.\n",
+      "    sort : bool, default True\n",
+      "        Sort by frequencies when True. Sort by DataFrame column values when False.\n",
+      "    ascending : bool, default False\n",
+      "        Sort in ascending order.\n",
+      "    dropna : bool, default True\n",
+      "        Don't include counts of rows that contain NA values.\n",
+      "\n",
+      "        .. versionadded:: 1.3.0\n",
+      "\n",
+      "    Returns\n",
+      "    -------\n",
+      "    Series\n",
+      "\n",
+      "    See Also\n",
+      "    --------\n",
+      "    Series.value_counts: Equivalent method on Series.\n",
+      "\n",
+      "    Notes\n",
+      "    -----\n",
+      "    The returned Series will have a MultiIndex with one level per input\n",
+      "    column but an Index (non-multi) for a single label. By default, rows\n",
+      "    that contain any NA values are omitted from the result. By default,\n",
+      "    the resulting Series will be in descending order so that the first\n",
+      "    element is the most frequently-occurring row.\n",
+      "\n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> df = pd.DataFrame({'num_legs': [2, 4, 4, 6],\n",
+      "    ...                    'num_wings': [2, 0, 0, 0]},\n",
+      "    ...                   index=['falcon', 'dog', 'cat', 'ant'])\n",
+      "    >>> df\n",
+      "            num_legs  num_wings\n",
+      "    falcon         2          2\n",
+      "    dog            4          0\n",
+      "    cat            4          0\n",
+      "    ant            6          0\n",
+      "\n",
+      "    >>> df.value_counts()\n",
+      "    num_legs  num_wings\n",
+      "    4         0            2\n",
+      "    2         2            1\n",
+      "    6         0            1\n",
+      "    Name: count, dtype: int64\n",
+      "\n",
+      "    >>> df.value_counts(sort=False)\n",
+      "    num_legs  num_wings\n",
+      "    2         2            1\n",
+      "    4         0            2\n",
+      "    6         0            1\n",
+      "    Name: count, dtype: int64\n",
+      "\n",
+      "    >>> df.value_counts(ascending=True)\n",
+      "    num_legs  num_wings\n",
+      "    2         2            1\n",
+      "    6         0            1\n",
+      "    4         0            2\n",
+      "    Name: count, dtype: int64\n",
+      "\n",
+      "    >>> df.value_counts(normalize=True)\n",
+      "    num_legs  num_wings\n",
+      "    4         0            0.50\n",
+      "    2         2            0.25\n",
+      "    6         0            0.25\n",
+      "    Name: proportion, dtype: float64\n",
+      "\n",
+      "    With `dropna` set to `False` we can also count rows with NA values.\n",
+      "\n",
+      "    >>> df = pd.DataFrame({'first_name': ['John', 'Anne', 'John', 'Beth'],\n",
+      "    ...                    'middle_name': ['Smith', pd.NA, pd.NA, 'Louise']})\n",
+      "    >>> df\n",
+      "      first_name middle_name\n",
+      "    0       John       Smith\n",
+      "    1       Anne        <NA>\n",
+      "    2       John        <NA>\n",
+      "    3       Beth      Louise\n",
+      "\n",
+      "    >>> df.value_counts()\n",
+      "    first_name  middle_name\n",
+      "    Beth        Louise         1\n",
+      "    John        Smith          1\n",
+      "    Name: count, dtype: int64\n",
+      "\n",
+      "    >>> df.value_counts(dropna=False)\n",
+      "    first_name  middle_name\n",
+      "    Anne        NaN            1\n",
+      "    Beth        Louise         1\n",
+      "    John        Smith          1\n",
+      "                NaN            1\n",
+      "    Name: count, dtype: int64\n",
+      "\n",
+      "    >>> df.value_counts(\"first_name\")\n",
+      "    first_name\n",
+      "    John    2\n",
+      "    Anne    1\n",
+      "    Beth    1\n",
+      "    Name: count, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pd.DataFrame.value_counts)"
    ]
   }
  ],
