--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,13 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "      rcid            short_name\n",
       "3008     6          Human Rights\n",
       "4980     8  Economic Development\n",
@@ -64,7 +65,15 @@
       "4981    11  Economic Development\n",
       "4982    18  Economic Development\n",
       "['Human Rights' 'Economic Development' 'Colonialism' 'Palestine' 'Arms'\n",
-      " 'Nuclear']\n"
+      " 'Nuclear']\n",
+      "                      rcid\n",
+      "short_name                \n",
+      "Arms                  1092\n",
+      "Palestine             1061\n",
+      "Human Rights          1015\n",
+      "Colonialism            957\n",
+      "Nuclear                855\n",
+      "Economic Development   765\n"
      ]
     },
     {
@@ -73,7 +82,7 @@
        "\"\\nsome rcids don't have issue tags, some have multiple\\n\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +102,7 @@
     "# print(issues.describe())\n",
     "# print(issues.dtypes)\n",
     "# print(issues.isna().sum()) #no na values\n",
-    "# print(issues.duplicated(subset=['rcid', 'short_name']).sum()) # on rcid and short_name, no duplicates\n",
+    "print(issues.duplicated(subset=['rcid', 'short_name']).sum()) # on rcid and short_name, no duplicates\n",
     "# print(issues['short_name'].unique()) #['me' 'nu' 'di' 'hr' 'co' 'ec']\n",
     "\n",
     "map_issues = {'me': 'Palestine', 'nu': 'Nuclear', 'di': 'Arms', 'hr': 'Human Rights', 'co': 'Colonialism', 'ec': 'Economic Development'}\n",
@@ -102,6 +111,9 @@
     "print(issues.head()) \n",
     "print(issues['short_name'].unique())\n",
     "\n",
+    "summary_issues = issues.groupby('short_name').count().sort_values('rcid', ascending=False)\n",
+    "print(summary_issues)\n",
+    "\n",
     "\"\"\"\n",
     "some rcids don't have issue tags, some have multiple\n",
     "\"\"\""
@@ -109,15 +121,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   rcid        country country_code vote\n",
-      "0     3  United States           US  yes\n"
+      "           rcid  country  country_code\n",
+      "vote                                  \n",
+      "abstain  110893   110893        110893\n",
+      "no        65500    65500         65500\n",
+      "yes      693544   693544        693544\n",
+      "               country  proportion\n",
+      "0           Seychelles        0.98\n",
+      "0  São Tomé & Príncipe        0.96\n",
+      "0          Timor-Leste        0.95\n",
+      "         country  proportion\n",
+      "0  United States        0.50\n",
+      "0         Israel        0.39\n",
+      "0          Palau        0.38\n",
+      "                       country  proportion\n",
+      "0                     Zanzibar        1.00\n",
+      "0  Federal Republic of Germany        0.42\n",
+      "0                  South Sudan        0.36\n"
      ]
     }
    ],
@@ -147,17 +174,44 @@
     ")\n",
     "\n",
     "# print(missing_country['country'].unique()) #['Yemen Arab Republic' 'Zanzibar' 'Federal Republic of Germany' 'Namibia']\n",
-    "mapping = {'Yemen Arab Republic': 'YAR', 'Zanzibar': 'ZAN', 'Federal Republic of Germany': 'GER', 'Namibia': 'NAM'}\n",
+    "mapping = {'Yemen Arab Republic': 'YA', 'Zanzibar': 'ZN', 'Federal Republic of Germany': 'WG', 'Namibia': 'NA'}\n",
     "unvotes['country_code'] = unvotes['country_code'].fillna(unvotes['country'].map(mapping))\n",
-    "print(unvotes.head(1))\n",
+    "#print(unvotes.head(1))\n",
     "\n",
     "# print(unvotes.isna().sum()) #now country code has no missing values\n",
-    "# print(unvotes.duplicated(subset=['rcid', 'country_code']).sum()) # on rcid and country_code, no duplicates"
+    "# print(unvotes.duplicated(subset=['rcid', 'country_code']).sum()) # on rcid and country_code, no duplicates\n",
+    "\n",
+    "# Exploratory Data Analysis \n",
+    "# Find proportion of yes, no, abstain votes\n",
+    "summary_vote = unvotes.groupby('vote').count()\n",
+    "print(summary_vote)\n",
+    "\n",
+    "#Find proportion of yes, no, abstain votes by country \n",
+    "yes_proportion = pd.DataFrame()\n",
+    "no_proportion = pd.DataFrame()\n",
+    "abstain_proportion = pd.DataFrame()\n",
+    "countries = unvotes['country'].unique()\n",
+    "for country in countries: \n",
+    "    subset = unvotes[unvotes['country'] == country]\n",
+    "    yes = round(subset[subset['vote'] == 'yes'].shape[0] / subset.shape[0], 2)\n",
+    "    no = round(subset[subset['vote'] == 'no'].shape[0] / subset.shape[0], 2)\n",
+    "    abstain = round(subset[subset['vote'] == 'abstain'].shape[0] / subset.shape[0], 2)\n",
+    "\n",
+    "    yes_df = pd.DataFrame({'country': [country], 'proportion': [yes]})\n",
+    "    yes_proportion = pd.concat([yes_proportion, yes_df], axis = 0)\n",
+    "    no_df = pd.DataFrame({'country': [country], 'proportion': [no]})\n",
+    "    no_proportion = pd.concat([no_proportion, no_df], axis = 0)\n",
+    "    abstain_df = pd.DataFrame({'country': [country], 'proportion': [abstain]})\n",
+    "    abstain_proportion = pd.concat([abstain_proportion, abstain_df], axis = 0)\n",
+    "\n",
+    "for df in [yes_proportion, no_proportion, abstain_proportion]: \n",
+    "    df = df.sort_values('proportion', ascending = False)\n",
+    "    print(df.head(3))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -318,6 +372,8 @@
      "text": [
       "            country  correlation_score         issue\n",
       "0           Vanuatu               0.99  Human Rights\n",
+      "1        Seychelles               0.96  Human Rights\n",
+      "2           Namibia               0.95  Human Rights\n",
       "36            China               0.88  Human Rights\n",
       "90        Singapore               0.82  Human Rights\n",
       "99           Russia               0.81  Human Rights\n",
@@ -326,6 +382,8 @@
       "167   United States               0.27  Human Rights\n",
       "            country  correlation_score                 issue\n",
       "0           Namibia               1.00  Economic Development\n",
+      "1             Yemen               1.00  Economic Development\n",
+      "2       North Korea               1.00  Economic Development\n",
       "89        Singapore               0.90  Economic Development\n",
       "104           China               0.88  Economic Development\n",
       "149          Russia               0.58  Economic Development\n",
@@ -334,6 +392,8 @@
       "169   United States               0.32  Economic Development\n",
       "            country  correlation_score        issue\n",
       "0           Namibia               1.00  Colonialism\n",
+      "1            Brunei               0.98  Colonialism\n",
+      "2           Vanuatu               0.98  Colonialism\n",
       "10            China               0.96  Colonialism\n",
       "54        Singapore               0.89  Colonialism\n",
       "108          Russia               0.82  Colonialism\n",
@@ -342,22 +402,28 @@
       "169   United States               0.25  Colonialism\n",
       "            country  correlation_score      issue\n",
       "0        Seychelles               1.00  Palestine\n",
+      "1       North Korea               1.00  Palestine\n",
+      "2        Mozambique               1.00  Palestine\n",
       "15            China               0.99  Palestine\n",
       "91        Singapore               0.88  Palestine\n",
       "99           Russia               0.85  Palestine\n",
       "160          France               0.49  Palestine\n",
       "164  United Kingdom               0.48  Palestine\n",
       "169   United States               0.21  Palestine\n",
-      "            country  correlation_score issue\n",
-      "0       North Korea               1.00  Arms\n",
-      "50        Singapore               0.92  Arms\n",
-      "132          Russia               0.74  Arms\n",
-      "134           China               0.73  Arms\n",
-      "168  United Kingdom               0.39  Arms\n",
-      "169          France               0.31  Arms\n",
-      "170   United States               0.30  Arms\n",
+      "                 country  correlation_score issue\n",
+      "0            North Korea               1.00  Arms\n",
+      "1    São Tomé & Príncipe               0.97  Arms\n",
+      "2                Vanuatu               0.97  Arms\n",
+      "50             Singapore               0.92  Arms\n",
+      "132               Russia               0.74  Arms\n",
+      "134                China               0.73  Arms\n",
+      "168       United Kingdom               0.39  Arms\n",
+      "169               France               0.31  Arms\n",
+      "170        United States               0.30  Arms\n",
       "            country  correlation_score    issue\n",
       "0       North Korea               1.00  Nuclear\n",
+      "1            Brunei               0.98  Nuclear\n",
+      "2           Bahrain               0.98  Nuclear\n",
       "83        Singapore               0.89  Nuclear\n",
       "129          Russia               0.73  Nuclear\n",
       "137           China               0.69  Nuclear\n",
@@ -388,7 +454,7 @@
     "for key, value in mapping.items(): \n",
     "    df = unvotes[unvotes['rcid'].isin(value)]\n",
     "    correlation_by_issue = get_top_correlations(df, key)\n",
-    "    top = correlation_by_issue.head(1)\n",
+    "    top = correlation_by_issue.head(3)\n",
     "    veto = correlation_by_issue[correlation_by_issue['country'].isin(countries_of_interest)]\n",
     "    together = pd.concat([top, veto], axis = 0)\n",
     "    print(together)\n"
@@ -396,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -455,130 +521,6 @@
     "    print(f\"No: {no}\")\n",
     "    print(f\"Abstain: {abstain} \\n\")\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function value_counts in module pandas.core.frame:\n",
-      "\n",
-      "value_counts(self, subset: 'IndexLabel | None' = None, normalize: 'bool' = False, sort: 'bool' = True, ascending: 'bool' = False, dropna: 'bool' = True) -> 'Series'\n",
-      "    Return a Series containing the frequency of each distinct row in the Dataframe.\n",
-      "\n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    subset : label or list of labels, optional\n",
-      "        Columns to use when counting unique combinations.\n",
-      "    normalize : bool, default False\n",
-      "        Return proportions rather than frequencies.\n",
-      "    sort : bool, default True\n",
-      "        Sort by frequencies when True. Sort by DataFrame column values when False.\n",
-      "    ascending : bool, default False\n",
-      "        Sort in ascending order.\n",
-      "    dropna : bool, default True\n",
-      "        Don't include counts of rows that contain NA values.\n",
-      "\n",
-      "        .. versionadded:: 1.3.0\n",
-      "\n",
-      "    Returns\n",
-      "    -------\n",
-      "    Series\n",
-      "\n",
-      "    See Also\n",
-      "    --------\n",
-      "    Series.value_counts: Equivalent method on Series.\n",
-      "\n",
-      "    Notes\n",
-      "    -----\n",
-      "    The returned Series will have a MultiIndex with one level per input\n",
-      "    column but an Index (non-multi) for a single label. By default, rows\n",
-      "    that contain any NA values are omitted from the result. By default,\n",
-      "    the resulting Series will be in descending order so that the first\n",
-      "    element is the most frequently-occurring row.\n",
-      "\n",
-      "    Examples\n",
-      "    --------\n",
-      "    >>> df = pd.DataFrame({'num_legs': [2, 4, 4, 6],\n",
-      "    ...                    'num_wings': [2, 0, 0, 0]},\n",
-      "    ...                   index=['falcon', 'dog', 'cat', 'ant'])\n",
-      "    >>> df\n",
-      "            num_legs  num_wings\n",
-      "    falcon         2          2\n",
-      "    dog            4          0\n",
-      "    cat            4          0\n",
-      "    ant            6          0\n",
-      "\n",
-      "    >>> df.value_counts()\n",
-      "    num_legs  num_wings\n",
-      "    4         0            2\n",
-      "    2         2            1\n",
-      "    6         0            1\n",
-      "    Name: count, dtype: int64\n",
-      "\n",
-      "    >>> df.value_counts(sort=False)\n",
-      "    num_legs  num_wings\n",
-      "    2         2            1\n",
-      "    4         0            2\n",
-      "    6         0            1\n",
-      "    Name: count, dtype: int64\n",
-      "\n",
-      "    >>> df.value_counts(ascending=True)\n",
-      "    num_legs  num_wings\n",
-      "    2         2            1\n",
-      "    6         0            1\n",
-      "    4         0            2\n",
-      "    Name: count, dtype: int64\n",
-      "\n",
-      "    >>> df.value_counts(normalize=True)\n",
-      "    num_legs  num_wings\n",
-      "    4         0            0.50\n",
-      "    2         2            0.25\n",
-      "    6         0            0.25\n",
-      "    Name: proportion, dtype: float64\n",
-      "\n",
-      "    With `dropna` set to `False` we can also count rows with NA values.\n",
-      "\n",
-      "    >>> df = pd.DataFrame({'first_name': ['John', 'Anne', 'John', 'Beth'],\n",
-      "    ...                    'middle_name': ['Smith', pd.NA, pd.NA, 'Louise']})\n",
-      "    >>> df\n",
-      "      first_name middle_name\n",
-      "    0       John       Smith\n",
-      "    1       Anne        <NA>\n",
-      "    2       John        <NA>\n",
-      "    3       Beth      Louise\n",
-      "\n",
-      "    >>> df.value_counts()\n",
-      "    first_name  middle_name\n",
-      "    Beth        Louise         1\n",
-      "    John        Smith          1\n",
-      "    Name: count, dtype: int64\n",
-      "\n",
-      "    >>> df.value_counts(dropna=False)\n",
-      "    first_name  middle_name\n",
-      "    Anne        NaN            1\n",
-      "    Beth        Louise         1\n",
-      "    John        Smith          1\n",
-      "                NaN            1\n",
-      "    Name: count, dtype: int64\n",
-      "\n",
-      "    >>> df.value_counts(\"first_name\")\n",
-      "    first_name\n",
-      "    John    2\n",
-      "    Anne    1\n",
-      "    Beth    1\n",
-      "    Name: count, dtype: int64\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(pd.DataFrame.value_counts)"
    ]
   }
  ],
