--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31,9 +31,9 @@
     "import seaborn as sns\n",
     "\n",
     "# read data in \n",
-    "issues = pd.read_csv('../data/issues.csv', index_col = 0)\n",
-    "roll_calls = pd.read_csv('../data/roll_calls.csv', index_col = 0, na_values=['NA', ''])\n",
-    "unvotes = pd.read_csv('../data/unvotes.csv', index_col = 0)\n",
+    "issues = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-23/unvotes.csv', index_col = 0)\n",
+    "roll_calls = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-23/roll_calls.csv', index_col = 0, na_values=['NA', ''])\n",
+    "unvotes = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-23/unvotes.csv', index_col = 0)\n",
     "\n",
     "# print(issues.head(2))\n",
     "print(issues.index) #'rcid' column\n",
@@ -526,9 +526,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv-dsa2101",
+   "display_name": "DSA2101 Project",
    "language": "python",
-   "name": "python3"
+   "name": "dsa2101-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -540,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
