--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -31,7 +31,7 @@
     "import seaborn as sns\n",
     "\n",
     "# read data in \n",
-    "issues = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-23/unvotes.csv', index_col = 0)\n",
+    "issues = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-23/issues.csv', index_col = 0)\n",
     "roll_calls = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-23/roll_calls.csv', index_col = 0, na_values=['NA', ''])\n",
     "unvotes = pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2021/2021-03-23/unvotes.csv', index_col = 0)\n",
     "\n",
@@ -359,6 +359,53 @@
     "filtered_table_with_first = pd.concat([first_entry, filtered_table], axis = 0)\n",
     "\n",
     "print(filtered_table_with_first)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Question: For each issue, which country has the highest \"success rate\" in voting? \n",
+    "\n",
+    "#find the rcids for each issue (using merge instead of mapping and for loop)\n",
+    "unvotes['correlated'] = true_positive_negative\n",
+    "unvotes_issues = unvotes.merge(issues, on = 'rcid', how = 'left')\n",
+    "\n",
+    "#dataframe with columns: country, issue, score\n",
+    "country_corr_issues = unvotes_issues.groupby(['country', 'short_name'])[['correlated']].mean().sort_values(['short_name', 'correlated'], ascending = [True, False]).reset_index()\n",
+    "\n",
+    "#subsetting top 3 + countries of interest\n",
+    "country_corr_issues['rank'] = country_corr_issues.groupby('short_name')['correlated'].rank(method = 'first', ascending = False)\n",
+    "country_corr_issues = country_corr_issues[(country_corr_issues['rank'] <= 3) | (country_corr_issues['country'].isin(countries_of_interest))]\n",
+    "\n",
+    "#making top 3 diff colour\n",
+    "country_corr_issues['group'] = 'COI'\n",
+    "country_corr_issues.loc[country_corr_issues['rank'] <= 3, 'group'] = 'Top 3'\n",
+    "country_corr_issues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot\n",
+    "col_palette = {\n",
+    "    'Top 3':    '#E64A19',   # orange\n",
+    "    'COI': '#1976D2',   # blue\n",
+    "}\n",
+    "g = sns.catplot(country_corr_issues, kind = 'bar', x = 'correlated', y = 'country', col = 'short_name', col_wrap = 3, sharex = False, sharey = False, hue = 'group', palette = col_palette, legend = False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ^alternative to the code below"
    ]
   },
   {
