--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -97,26 +97,24 @@
     "note: \n",
     "\n",
     "\"\"\"\n",
-    "\n",
     "# print(\"shape: \" + str(issues.shape)) #(5745, 3)\n",
     "# print(issues.describe())\n",
     "# print(issues.dtypes)\n",
-    "# print(issues.isna().sum()) #no na values\n",
-    "print(issues.duplicated(subset=['rcid', 'short_name']).sum()) # on rcid and short_name, no duplicates\n",
-    "# print(issues['short_name'].unique()) #['me' 'nu' 'di' 'hr' 'co' 'ec']\n",
+    "# print(issues.isna().sum()) # no NaN values\n",
+    "# print(issues.duplicated(subset=['rcid', 'short_name']).sum()) # no duplicates on rcid and short_name\n",
+    "# print(issues['short_name'].unique()) # ['me' 'nu' 'di' 'hr' 'co' 'ec']\n",
     "\n",
     "map_issues = {'me': 'Palestine', 'nu': 'Nuclear', 'di': 'Arms', 'hr': 'Human Rights', 'co': 'Colonialism', 'ec': 'Economic Development'}\n",
     "issues['short_name'] = issues['short_name'].replace(map_issues)\n",
     "issues = issues.drop(columns=['issue']).sort_values('rcid') \n",
-    "print(issues.head()) \n",
-    "print(issues['short_name'].unique())\n",
     "\n",
+    "\n",
+    "#Exploratory Data Analysis\n",
+    "print(issues['short_name'].unique())\n",
     "summary_issues = issues.groupby('short_name').count().sort_values('rcid', ascending=False)\n",
     "print(summary_issues)\n",
     "\n",
-    "\"\"\"\n",
-    "some rcids don't have issue tags, some have multiple\n",
-    "\"\"\""
+    "#Note: some rcids don't have issue tags (i.e not in this dataset), some have multiple."
    ]
   },
   {
@@ -165,6 +163,7 @@
     "\n",
     "missing_country = unvotes[unvotes['country_code'].isna()]\n",
     "\n",
+    "# update country codes (present in data cleaning steps on GitHub, written in R)\n",
     "unvotes['country_code'] = np.where(unvotes['country'] == 'Czechoslovakia', 'CS', unvotes['country_code'])\n",
     "unvotes['country_code'] = np.where(unvotes['country'] == 'Yugoslavia', 'YU', unvotes['country_code'])\n",
     "unvotes['country_code'] = np.where(unvotes['country'] == 'German Democratic Republic', 'DD', unvotes['country_code'])\n",
@@ -176,19 +175,20 @@
     "    unvotes['country']\n",
     ")\n",
     "\n",
+    "#attach country codes to countries without country codes \n",
     "# print(missing_country['country'].unique()) #['Yemen Arab Republic' 'Zanzibar' 'Federal Republic of Germany' 'Namibia']\n",
     "mapping = {'Yemen Arab Republic': 'YA', 'Zanzibar': 'ZN', 'Federal Republic of Germany': 'WG', 'Namibia': 'NA'}\n",
     "unvotes['country_code'] = unvotes['country_code'].fillna(unvotes['country'].map(mapping))\n",
     "\n",
-    "# print(unvotes.isna().sum()) #now country code has no missing values\n",
+    "# print(unvotes.isna().sum()) # now country code has no missing values\n",
     "# print(unvotes.duplicated(subset=['rcid', 'country_code']).sum()) # on rcid and country_code, no duplicates\n",
     "\n",
-    "# Exploratory Data Analysis \n",
-    "# Find proportion of yes, no, abstain votes\n",
+    "#Exploratory Data Analysis \n",
+    "#Find proportion of yes, no, abstain votes across all votes\n",
     "summary_vote = unvotes.groupby('vote').size()\n",
     "print(summary_vote)\n",
     "\n",
-    "#find the top few countries likely to vote yes, no and \n",
+    "#Find the top few countries likely to vote yes, no and abstain\n",
     "yes_proportion = pd.DataFrame()\n",
     "no_proportion = pd.DataFrame()\n",
     "abstain_proportion = pd.DataFrame()\n",
@@ -209,8 +209,7 @@
     "for vote, df in [(\"yes\", yes_proportion), (\"no\", no_proportion), (\"abstain\", abstain_proportion)]: \n",
     "    df = df.sort_values('proportion', ascending = False)\n",
     "    print(f\"Top 3 countries likely to vote {vote}\")\n",
-    "    print(df.head(3))\n",
-    "\n"
+    "    print(df.head(3))"
    ]
   },
   {
@@ -241,7 +240,7 @@
     "descr               1\n",
     "\"\"\"\n",
     "\n",
-    "# print(roll_calls.dtypes) #convert date to DateTime; importantvote, amend, para left as int/float\n",
+    "# print(roll_calls.dtypes) #convert date to DateTime\n",
     "roll_calls['date'] = pd.to_datetime(roll_calls['date'], format='%Y-%m-%d')\n",
     "# print(roll_calls.dtypes)\n",
     "\n",
@@ -265,7 +264,7 @@
     "post_1985 = roll_calls[roll_calls['date'].between('1985-01-01', '2020-01-01')].sort_values('date', ascending=True)\n",
     "post_1985 = post_1985.drop(columns=['amend', 'para'])\n",
     "# print(post_1985.head(1))\n",
-    "#print(post_1985.isna().sum()) #missing entries: 604 importantvote, 8 unres, 573 short, 1 descr\n",
+    "# print(post_1985.isna().sum()) #missing entries: 604 importantvote, 8 unres, 573 short, 1 descr\n",
     "\n",
     "\"\"\"\n",
     "rcid               0\n",
@@ -985,7 +984,7 @@
    "source": [
     "#Question: What is the yes-rate for each issue? \n",
     "\n",
-    "def rates(subgroup, issue): \n",
+    "def rates(subgroup): \n",
     "    values = subgroup['vote'].value_counts()\n",
     "    sum = values.sum()\n",
     "    yes = round(values.get('yes', 0) / sum, 2)\n",
@@ -995,7 +994,7 @@
     "\n",
     "for key, value in mapping.items(): \n",
     "    df = unvotes[unvotes['rcid'].isin(value)]\n",
-    "    yes, no, abstain = rates(df, key)\n",
+    "    yes, no, abstain = rates(df)\n",
     "    print(f\"{key}\")\n",
     "    print(f\"Yes: {yes}\")\n",
     "    print(f\"No: {no}\")\n",
@@ -1006,9 +1005,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSA2101 Project",
+   "display_name": "venv-dsa2101",
    "language": "python",
-   "name": "dsa2101-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1020,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
