--- a/dsaproject.ipynb
+++ b/dsaproject.ipynb
@@ -57,13 +57,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "      rcid            short_name\n",
-      "3008     6          Human Rights\n",
-      "4980     8  Economic Development\n",
-      "4023    11           Colonialism\n",
-      "4981    11  Economic Development\n",
-      "4982    18  Economic Development\n",
       "['Human Rights' 'Economic Development' 'Colonialism' 'Palestine' 'Arms'\n",
       " 'Nuclear']\n",
       "                      rcid\n",
@@ -75,16 +68,6 @@
       "Nuclear                855\n",
       "Economic Development   765\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nsome rcids don't have issue tags, some have multiple\\n\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -350,10 +333,10 @@
     "ratio = pd.concat([yes_ratio, no_ratio, abstain_ratio], axis = 1) #combine horizontally \n",
     "unvotes['majority'] = unvotes['rcid'].map(ratio.idxmax(axis=1)) #returns corresponding index with highest value\n",
     "\n",
-    "#merge with short_name column on issues df\n",
-    "correlated = ((unvotes['vote'] == 'yes') & (unvotes['majority'] == 'yes') |\n",
-    "                           (unvotes['vote'] == 'no') & (unvotes['majority'] == 'no') |\n",
-    "                           (unvotes['vote'] == 'abstain') & (unvotes['majority'] == 'abstain')) #returns a Boolean series for each row\n",
+    "#custom metric: correlation score\n",
+    "correlated = ((unvotes['vote'] == 'yes') & (unvotes['majority'] == 'yes') | #country votes yes, majority votes yes\n",
+    "                           (unvotes['vote'] == 'no') & (unvotes['majority'] == 'no') | #country votes no, majority votes no\n",
+    "                           (unvotes['vote'] == 'abstain') & (unvotes['majority'] == 'abstain')) #country abstains, majority abstains\n",
     "\n",
     "#obtain correlation score by country across all issues, across all time\n",
     "correlation_table = correlated.groupby(unvotes['country']).mean().reset_index(drop=False).rename(columns={0: 'correlation_score'}).sort_values('correlation_score', ascending=False)\n",
@@ -361,7 +344,7 @@
     "correlation_table = correlation_table.reset_index(drop=True)\n",
     "print(f\"Number of countries: {len(correlation_table)}\")\n",
     "\n",
-    "countries_of_interest = ['United States', 'China', 'United Kingdom', 'Russia', 'France', 'Singapore']\n",
+    "countries_of_interest = ['United States', 'China', 'United Kingdom', 'Russia', 'France', 'Singapore'] #UN Veto Powers + Singapore, a small, non-aligned state\n",
     "first_entry = correlation_table.head(3)\n",
     "filtered_table = correlation_table[correlation_table['country'].isin(countries_of_interest)]\n",
     "filtered_table_with_first = pd.concat([first_entry, filtered_table], axis = 0)\n",
@@ -937,69 +920,6 @@
     "}\n",
     "g = sns.catplot(country_corr_issues, kind = 'bar', x = 'correlated', y = 'country', col = 'short_name', col_wrap = 3, sharex = False, sharey = False, hue = 'group', palette = col_palette, legend = False)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Human Rights\n",
-      "Yes: 0.77\n",
-      "No: 0.07\n",
-      "Abstain: 0.16 \n",
-      "\n",
-      "Economic Development\n",
-      "Yes: 0.82\n",
-      "No: 0.06\n",
-      "Abstain: 0.12 \n",
-      "\n",
-      "Colonialism\n",
-      "Yes: 0.77\n",
-      "No: 0.08\n",
-      "Abstain: 0.15 \n",
-      "\n",
-      "Palestine\n",
-      "Yes: 0.82\n",
-      "No: 0.06\n",
-      "Abstain: 0.12 \n",
-      "\n",
-      "Arms\n",
-      "Yes: 0.82\n",
-      "No: 0.05\n",
-      "Abstain: 0.13 \n",
-      "\n",
-      "Nuclear\n",
-      "Yes: 0.82\n",
-      "No: 0.05\n",
-      "Abstain: 0.14 \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Question: What is the yes-rate for each issue? \n",
-    "\n",
-    "def rates(subgroup): \n",
-    "    values = subgroup['vote'].value_counts()\n",
-    "    sum = values.sum()\n",
-    "    yes = round(values.get('yes', 0) / sum, 2)\n",
-    "    no = round(values.get('no', 0) / sum, 2)\n",
-    "    abstain = round(values.get('abstain', 0) / sum, 2)\n",
-    "    return yes, no, abstain \n",
-    "\n",
-    "for key, value in mapping.items(): \n",
-    "    df = unvotes[unvotes['rcid'].isin(value)]\n",
-    "    yes, no, abstain = rates(df)\n",
-    "    print(f\"{key}\")\n",
-    "    print(f\"Yes: {yes}\")\n",
-    "    print(f\"No: {no}\")\n",
-    "    print(f\"Abstain: {abstain} \\n\")\n",
-    "    "
    ]
   }
  ],
